--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ navbar-links:
   Liên hệ:
     - Facebook: "https://beautifuljekyll.com"
     - Nơi làm việc: "https://www.markdowntutorial.com/"
-  Ủng hộ: "ungho"
+  Ủng hộ: "quyengoptien"
 #  Author's home: "https://deanattali.com"
 
 # --- Logo --- #
