--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,9 @@ author: Thái Doãn Minh
 navbar-links:
   Giới thiệu: "aboutme"
   Liên hệ:
-    - Facebook: "https://beautifuljekyll.com"
-    - Nơi làm việc: "https://www.markdowntutorial.com/"
-  Ủng hộ: "quyengoptien"
+    - Facebook: "https://www.facebook.com/doanminh.thai"
+    - Nơi làm việc: "https://myduchospital.vn/"
+  #Ủng hộ: "quyengoptien"
 #  Author's home: "https://deanattali.com"
 
 # --- Logo --- #
